# Tetris

./: .gitignore  .gitignore.txt  CMakeLists.txt
src/: main.cpp
src/game/: fieldData.cpp  forms.cpp  forms.h  game.cpp  game.h  gameData.h  positionData.cpp
src/game/core/: cell.cpp  cell.h  config.h  field.cpp  field.h  forms.cpp  forms.h  gameLogic.cpp  gameLogic.h  random.cpp  random.h  render.cpp  render.h  shapes.h  window.cpp  window.h
src/logger/: log.h  logger.h
